--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "bright-comment": "^1.5.7",
     "element-ui": "^2.15.6",
+    "js-cookie": "^3.0.1",
+    "v-distpicker": "^1.2.13",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.6.2"
